--- a/static/styles.css
+++ b/static/styles.css
@@ -1,1 +1,109 @@
+body {
+    background-color: #f4f4f4;
+    font-family: "Times New Roman", Times, serif;
+    padding: 4%;
+}
 
+/*NAVBAR*/
+nav {
+    background-color: #345;
+    color: white;
+    padding: 10px;
+    margin-bottom: 10%;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 1%;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+/*END OF NAVBAR*/
+
+
+
+.container {
+    columns: 2;
+    max-width: screen-size;
+    height: 300px;
+    background: None;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    text-align: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+/*INPUT*/
+
+input[type="text"] {
+    float:left;
+    padding: 100px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    height: 70%;
+    max-width: 70%;
+    text-transform: uppercase;
+    box-shadow: 5px 5px 10px 1px #000000;
+    font-family: "Times New Roman", Times, serif;
+}
+
+.dugmad{
+    float:left;
+    display: flex;
+    padding: 10px;
+    height: 29%;
+    width: 90%;
+    background-color: None;
+}
+
+button  {
+    padding: 10px;
+    margin: 3px;
+    background-color: #234;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 49%;
+    height: 99%;
+    box-shadow: 5px 5px 10px 1px #000000;
+}
+
+button:hover {
+    background-color: rgb(20, 31, 43);
+}
+
+/*OUTPUT*/
+.output {
+    margin-bottom: 2px;
+    padding: 10px;
+    height: 90%;
+    float:left;
+    width: 90%;
+    background-color: None;
+    border: 1px solid #b3d7ff;
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: 5px 5px 10px 1px #000000;
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+    align-items: center;
+    font-family: "Times New Roman", Times, serif;
+}
+
+/*ABOUT PAGE TEXT STYLE*/
+h2{
+    text-align: center;
+}
